--- a/CitiesModule/View/CitiesModuleViewController.xib
+++ b/CitiesModule/View/CitiesModuleViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CitiesModuleViewController" customModule="CitiesModule">
             <connections>
+                <outlet property="tableView" destination="G1e-oa-ji0" id="bun-xV-brx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="vJe-od-TGK"/>
             </connections>
         </placeholder>
@@ -16,9 +17,25 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G1e-oa-ji0">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="3aJ-mM-W9C"/>
+                        <outlet property="delegate" destination="-1" id="jnP-Z6-dcR"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="G1e-oa-ji0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="NIA-nT-mow"/>
+                <constraint firstItem="G1e-oa-ji0" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="aEI-IV-DMH"/>
+                <constraint firstItem="G1e-oa-ji0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="mVE-9w-ydO"/>
+                <constraint firstAttribute="bottom" secondItem="G1e-oa-ji0" secondAttribute="bottom" id="xts-Hr-s2Y"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="141" y="88"/>
+            <point key="canvasLocation" x="-310.14492753623193" y="87.723214285714278"/>
         </view>
         <customObject id="MCy-d0-Uod" customClass="CitiesModuleInitalizer" customModule="CitiesModule">
             <connections>
