--- a/ForecastModule/View/ForecastModuleViewController.xib
+++ b/ForecastModule/View/ForecastModuleViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForecastModuleViewController" customModule="ForecastModule">
             <connections>
+                <outlet property="tableView" destination="HwL-Gz-Xjg" id="s3Q-RF-SfP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,9 +17,25 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HwL-Gz-Xjg">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="F26-ke-s7w"/>
+                        <outlet property="delegate" destination="-1" id="dF0-Vg-4a3"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="HwL-Gz-Xjg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="G9Y-aJ-w9d"/>
+                <constraint firstItem="HwL-Gz-Xjg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="fGE-ot-vWI"/>
+                <constraint firstItem="HwL-Gz-Xjg" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="iZN-2V-nNV"/>
+                <constraint firstAttribute="bottom" secondItem="HwL-Gz-Xjg" secondAttribute="bottom" id="zug-3s-lga"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="141" y="108"/>
+            <point key="canvasLocation" x="-671" y="-157"/>
         </view>
         <customObject id="tM3-Li-24M" customClass="ForecastModuleIntializer" customModule="ForecastModule">
             <connections>
